--- a/nlp (1).ipynb
+++ b/nlp (1).ipynb
@@ -1153,7 +1153,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "msg_train,msg_test,label_train,label_test = train_test_split(messages['message'],messages['message'],test_size=0.3)"
+    "msg_train,msg_test,label_train,label_test = train_test_split(messages['message'],messages['label'],test_size=0.3)"
    ]
   },
   {
@@ -1221,7 +1221,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "predictions =pipeline.predict(meg_test)"
+    "predictions =pipeline.predict(msg_test)"
    ]
   },
   {
